Updated file paths for GitHub Pages

--- a/Source files/search.html
+++ b/Source files/search.html
@@ -61,7 +61,7 @@
         <div class="footer container">
 
             <div class="footer-left">
-                <a href="index.html"><img src="../assets/Navlogo.png" width="200px" height="50px" /></a>
+                <a href="../index.html"><img src="../assets/Navlogo.png" width="200px" height="50px" /></a>
                 <p class="footer-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae molestiae, aliquam doloremque sit,
                     voluptates voluptatem eaque nulla harum minima eveniet libero quibusdam labore laudantium quam eius itaque magni et
                     obcaecati?sit amet consectetur, adipisicing elit. Beatae molestiae, </p>
@@ -69,7 +69,7 @@
             <div class="footer-midd">
                 <h2 class="footer-h">COMPANY</h2>
                 <div class="footer-p">
-                    <a href="index.html">
+                    <a href="../index.html">
                         <p>Home</p>
                     </a>
                     <a href="aboutus.html">
