--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
-    <link rel="icon" href="../assets/Logo.png">
-    <link href="style.css" rel="stylesheet">
+    <link rel="icon" href="./assets/Logo.png">
+    <link href="./Source files/style.css" rel="stylesheet">
     <title>The Cozy Kitchen</title>
 </head>
 
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
             <div class="container">
 
-                <a class="navbar-brand" href="#"><img src="../assets/Navlogo.png" width="200px" height="60px" /></a>
+                <a class="navbar-brand" href="#"><img src="./assets/Navlogo.png" width="200px" height="60px" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                     aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -42,18 +42,18 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="aboutus.html">
+                            <a class="nav-link active" href="./Source files/aboutus.html">
                                 About Us
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="ourpartners.html">
+                            <a class="nav-link active" href="./Source files/ourpartners.html">
                                 Our partners
                             </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="feedback.html">
+                            <a class="nav-link active" href="./Source files/feedback.html">
                                 Feedback
                             </a>
                         </li>
@@ -62,7 +62,7 @@
                     </ul>
                     <form class="d-flex nav-btn">
                         <button class="btn btn-outline-warning search" type="submit">
-                            <a href="search.html" style="text-decoration: none;">Search your favourite dishesh <svg
+                            <a href="./Source files/search.html" style="text-decoration: none;">Search your favourite dishesh <svg
                                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
                                     viewBox="0 0 16 16">
                                     <path
@@ -70,7 +70,7 @@
                                 </svg> </a>
                         </button>
                         <button type="button" class="btn btn-outline-info">
-                            <a href="myCart.html">
+                            <a href="./Source files/myCart.html">
                                 MY Cart
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3"
                                     viewBox="0 0 16 16">
@@ -96,7 +96,7 @@
 
                 </div>
                 <div class="rightside ">
-                    <img src="../assets/hero-img.png" alt="">
+                    <img src="./assets/hero-img.png" alt="">
                 </div>
             </div>
         </section>
@@ -123,8 +123,8 @@
     <section class="container download-section">
         <h1 class="download-h1">For Better Experience Download Cozy Kitchen App</h1>
         <div>
-            <img class="app-img" src="../assets/play_store.png" alt="">
-            <img class="app-img" src="../assets/app_store.png" alt="">
+            <img class="app-img" src="./assets/play_store.png" alt="">
+            <img class="app-img" src="./assets/app_store.png" alt="">
         </div>
     </section>
 
@@ -133,7 +133,7 @@
         <div class="footer container">
 
             <div class="footer-left">
-                <a href="index.html"><img src="../assets/Navlogo.png" width="200px" height="50px" /></a>
+                <a href="index.html"><img src="./assets/Navlogo.png" width="200px" height="50px" /></a>
                 <p class="footer-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae molestiae, aliquam doloremque sit,
                     voluptates voluptatem eaque nulla harum minima eveniet libero quibusdam labore laudantium quam eius itaque magni et
                     obcaecati?sit amet consectetur, adipisicing elit. Beatae molestiae, </p>
@@ -144,10 +144,10 @@
                     <a href="index.html">
                         <p>Home</p>
                     </a>
-                    <a href="aboutus.html">
+                    <a href="./Source files/aboutus.html">
                         <p>About us</p>
                     </a>
-                    <a href="ourpartners.html">
+                    <a href="./Source files/ourpartners.html">
                         <p>Our partners</p>
                     </a>
                     <a href="#">
@@ -165,12 +165,12 @@
 
     </footer>
 
-    <script src="menu.js"></script>
-    <script src="foodlist.js"></script>
+    <script src="./Source files/menu.js"></script>
+    <script src="./Source files/foodlist.js"></script>
     <script>
         localStorage.setItem('searchQuery', "#");
         function gotosearch() {
-            window.location.href = "./search.html";
+            window.location.href = "./Source files/search.html";
         }
     </script>
 </body>
